# NexSocio

./: .env.example  .gitignore  .vercelignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt  vercel.json
libs/nexus-common/: pyproject.toml
libs/nexus-common/nexus_common/: __init__.py
libs/nexus-common/nexus_common/billing/: __init__.py  stripe_billing.py
libs/nexus-common/nexus_common/domain/: business_tools.py  enums.py  feature_flags.py  models.py  sector_rules.py
libs/nexus-common/nexus_common/media/: __init__.py  formats.py
libs/nexus-common/nexus_common/observability/: tracing.py
libs/nexus-common/nexus_common/safety/: __init__.py  moderation.py
libs/nexus-common/nexus_common/security/: jwt.py  rate_limit.py  zkp.py
scripts/: deploy-staging.sh  deploy-vercel.sh  deploy-vps.sh  dev-start-all.sh  dev-stop-all.sh  dev.sh  generate-brand-icons.mjs  generate-i18n-locales.mjs  generate-pwa-icons.mjs  go-live-all.sh  go-live-apis.sh  merge-i18n-overrides.mjs  process-logo-mark.mjs  production-deploy.sh  security-audit.sh  set-github-about.sh  setup-stripe.sh  (+5 more)
services/collaboration/: Dockerfile  pyproject.toml
services/collaboration/api/: deps.py  main.py  routes.py
services/collaboration/application/: call_signaling.py  dtos.py  services.py
services/collaboration/infrastructure/: config.py  database.py  models.py
services/notification/: Dockerfile  pyproject.toml
services/notification/api/: deps.py  main.py  routes.py
services/notification/application/: dtos.py  push_service.py  services.py  ws_manager.py
services/notification/infrastructure/: config.py  database.py  models.py
(+295 files in other folders)
